--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<meta charset="UTF-8">
-		<title>Home Page -- Change to be pushed to GitHub</title>
+		<title>Home Page</title>
 	</head>
 	<body>
 		<nav></nav>
